fix: resolve the gap and image size

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ body {
 .recipe-container header .nav-image img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 1rem;
 }
 
